기본 기능 개발 API:  Version Glue:  Version  Status  ListPools  ListImages Mirror:  MirrorStatus  MirrorSetup  MirrorDelete  MirrorImageList  MirrorImageInfo  MirrorImageSetup  MirrorImageUpdate  MirrorImageDelete
Todo:
 MirrorImagePrimaryStatus
 MirrorImagePrimarySet
 MirrorImagePrimaryUnset
